# anthill

./: .agent-instructions.md  .env.example  .env.production  .env.test  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Cargo.toml  FOLDER_TASKS_SETUP.md  GITHUB_WORKFLOW.md  README.md  STRUCTURE.md  TODO.md  WARP.md  clippy.toml  codecov.yml  docker-compose.test.yml  kanidm-ca.pem  rustfmt.toml  setup-github.sh  sonar-project.properties  start-system.sh  stop-system.sh  tarpaulin.toml  test_register.sh  test_session_flow.sh
infra/kanidm_init/: Cargo.toml  Dockerfile  entrypoint.sh  setup-kanidm.sh
infra/kanidm_init/src/: client.rs  main.rs  setup.rs
services/inventory_service/api/: Cargo.toml
services/inventory_service/api/src/: consumers.rs  lib.rs  main.rs  openapi.rs  state.rs  worker.rs
services/inventory_service/api/src/handlers/: adjustment.rs  category.rs  cycle_count.rs  delivery.rs  health.rs  landed_cost.rs  lot_serial.rs  mod.rs  picking.rs  product_images.rs  product_import.rs  product_variants.rs  products.rs  putaway.rs  quality.rs  receipt.rs  reconciliation.rs  replenishment.rs  reports.rs  rma.rs  scrap.rs  search.rs  stock_levels.rs  stock_take.rs  transfer.rs  valuation.rs  warehouses.rs
services/inventory_service/api/src/middleware/: auth.rs  idempotency.rs  mod.rs
services/inventory_service/api/src/models/: mod.rs
services/inventory_service/api/src/routes/: mod.rs  quality.rs  replenishment.rs  reports.rs
services/inventory_service/api/tests/: business_logic_test_helpers.rs  category_integration_tests.rs  concurrent_stock_tests.rs  cycle_count_integration_tests.rs  helpers.rs  location_architecture_tests.rs  lot_serial_fefo_integration_tests.rs  product_integration_tests.rs  reconciliation_integration_tests.rs  reorder_rules_tests.rs  reports_mvp_integration_tests.rs  scrap_integration_tests.rs  stock_operations_integration_tests.rs  stock_reservation_tests.rs  valuation_business_logic_tests.rs  warehouse_integration_tests.rs
services/inventory_service/core/: Cargo.toml
services/inventory_service/core/benches/: inventory_benchmarks.rs
services/inventory_service/core/src/: events.rs  lib.rs  models.rs
services/inventory_service/core/src/domains/: category.rs  mod.rs  quality.rs  replenishment.rs
services/inventory_service/core/src/dto/: adjustment.rs  category.rs  common.rs  cycle_count.rs  delivery.rs  mod.rs  product.rs  product_image.rs  product_import.rs  product_variant.rs  receipt.rs  reconciliation.rs  removal_strategy.rs  reports.rs  rma.rs  scrap.rs  stock_levels.rs  stock_take.rs  transfer.rs
services/inventory_service/core/src/repositories/: category.rs  delivery_order.rs  event.rs  landed_cost.rs  lot_serial.rs  mod.rs  picking_method.rs  product.rs  product_image.rs  product_variant.rs  putaway.rs  quality.rs  receipt.rs  reconciliation.rs  removal_strategy.rs  replenishment.rs  rma.rs  stock.rs  stock_take.rs  transfer.rs  valuation.rs  warehouse.rs
services/inventory_service/core/src/services/: adjustment.rs  cache.rs  category.rs  cycle_count.rs  delivery.rs  distributed_lock.rs  inventory.rs  landed_cost.rs  lot_serial.rs  mod.rs  picking_method.rs  product.rs  product_image.rs  product_import.rs  product_variant.rs  quality.rs  receipt.rs  reconciliation.rs  removal_strategy.rs  replenishment.rs  reports.rs  rma.rs  scrap.rs  stock_levels.rs  stock_take.rs  transfer.rs  valuation.rs
services/inventory_service/infra/: Cargo.toml
services/inventory_service/infra/src/: lib.rs
services/inventory_service/infra/src/repositories/: category.rs  delivery_order.rs  event.rs  landed_cost.rs  lot_serial.rs  mod.rs  picking_method.rs  product.rs  product_image.rs  product_variant.rs  putaway.rs  quality.rs  receipt.rs  reconciliation.rs  removal_strategy.rs  (+7 more)
services/payment_service/: Cargo.toml
services/payment_service/src/: main.rs
services/user-service/: Cargo.toml
services/user-service/.backup/: handlers.rs  openapi.rs
services/user-service/src/common/: app_state.rs  error.rs  jwt.rs
services/user_service/api/: Cargo.toml  test_verification.sh
services/user_service/api/src/: admin_handlers.rs  cookie_helper.rs  extractors.rs  handlers.rs  invitation_handlers.rs  lib.rs  main.rs  oauth_handlers.rs  openapi.rs  password_reset_handlers.rs  permission_handlers.rs  profile_handlers.rs  rate_limiter.rs  verification_handlers.rs
services/user_service/api/tests/: INTEGRATION_TEST_GUIDE.md  README.md  admin_create_user_tests.rs  api_endpoint_tests.rs  auth_flow_tests.rs  auth_middleware_test.rs  authz_versioning_tests.rs  comprehensive_security_tests.rs  comprehensive_security_tests_README.md  dual_auth_tests.rs  error_handling_tests.rs  helpers.rs  integration_tests.rs  integration_utils.rs  invitation_tests.rs  jwt_session_security_tests.rs  oauth2_flow_tests.rs  rbac_security_tests.rs  security.rs  simple_oauth_test.rs  sql_injection_tests.rs  tenant_bootstrap_tests.rs  tenant_isolation_tests.rs  test_database.rs  test_helpers.rs  unit_tests.rs
services/user_service/core/: Cargo.toml
services/user_service/core/benches/: database_benchmarks.rs  password_benchmarks.rs
services/user_service/core/tests/: README.md  db_mocks.rs  mocks.rs  mod.rs  test_utils.rs
services/user_service/infra/: Cargo.toml
services/user_service/infra/src/: auth.rs  lib.rs
services/user_service_backup/: Cargo.toml  RESTRUCTURE_GUIDE.md
services/user_service_backup/src/: main.rs  models.rs
services/user_service_backup/src/common/: bootstrap.rs  hash_util.rs
shared/auth/: Cargo.toml  model.conf
shared/auth/src/: authz_version.rs  decision_cache.rs  enforcer.rs  extractors.rs  layer.rs  lib.rs  middleware.rs
shared/error/: Cargo.toml
shared/error/src/: lib.rs
shared/events/: Cargo.toml
shared/events/src/: events.rs  lib.rs  nats.rs
shared/kanidm_client/: Cargo.toml  README.md
shared/kanidm_client/src/: client.rs  config.rs  error.rs  lib.rs  types.rs
shared/rate_limit/: Cargo.toml
shared/rate_limit/src/: config.rs  lib.rs  limiter.rs  lockout.rs  memory_limiter.rs  middleware.rs  redis_limiter.rs
(+1252 files in other folders)
