[workspace]
members = [
    "services/*",
]

# Shared libraries will be added here when created
# "shared/common",
# "shared/db",
# "shared/auth",
# "shared/events",

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["tymon3568 <tymon3568@gmail.com>"]

[workspace.dependencies]
# Tokio is the async runtime
tokio = { version = "1", features = ["full"] }

# Axum is the web framework
axum = "0.8"

# Serde is for serialization and deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SQLx is for database access
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "json", "uuid"] }

# For logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# For handling configuration
config = "0.14"

# For handling errors
anyhow = "1.0"
thiserror = "1.0"

# For OpenAPI documentation
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# UUID support
uuid = { version = "1.6", features = ["v4", "v7", "serde"] }

# Date/Time support
chrono = { version = "0.4", features = ["serde"] }

# Tower middleware utilities
tower-http = { version = "0.5", features = ["cors", "trace", "compression-full"] }
