[workspace]
exclude = ["services/payment_service"]
members = [
  # Services (3-crate pattern)
  "services/user_service/api",
  "services/user_service/core",
  "services/user_service/infra",
  "services/inventory_service/api",
  "services/inventory_service/core",
  "services/inventory_service/infra",
  # Shared libraries
  "shared/error",
  "shared/jwt",
  "shared/config",
  "shared/types",
  "shared/db",
  "shared/auth",
  "shared/events",
  "shared/rate_limit"
]
resolver = "2"

[workspace.dependencies]
# Error handling
anyhow = "1.0"
# Async traits
async-trait = "0.1"
# Axum - web framework
axum = {version = "0.8", features = ["multipart"]}
bcrypt = "0.15"
chrono = {version = "0.4", features = ["serde"]}
# Configuration
config = "0.14"
criterion = {version = "0.5", features = ["html_reports"]}
dotenvy = "0.15"
fake = {version = "2.9", features = ["derive", "uuid", "chrono"]}
# Futures
futures = "0.3"
# Hex encoding
hex = "0.4"
# Image processing
image = "0.25"
# Inventory service crates (internal)
inventory_service_core = {path = "services/inventory_service/core"}
inventory_service_infra = {path = "services/inventory_service/infra"}
# AWS SDK for S3-compatible storage (RustFS)
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.65"
aws-smithy-runtime-api = "1.7"
# Auth & security
jsonwebtoken = "9.2"
lazy_static = "1.4"
# Testing utilities
mockall = "0.13"
# Once cell for global state
once_cell = "1.19"
proptest = "1.4"
# Redis for distributed locking and idempotency
redis = {version = "0.27", features = ["tokio-comp", "connection-manager"]}
regex = "1.10"
rust_decimal = {version = "1.0", features = ["serde"]}
# Serde - serialization
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
shared-auth = {path = "shared/auth"}
shared_config = {path = "shared/config"}
shared_db = {path = "shared/db"}
# Shared crates (internal)
shared_error = {path = "shared/error"}
shared_events = {path = "shared/events"}
shared_jwt = {path = "shared/jwt"}
shared_rate_limit = {path = "shared/rate_limit"}
shared_types = {path = "shared/types"}
# SQLx - database
sqlx = {version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json", "uuid", "chrono"]}
thiserror = "1.0"
# Tokio - async runtime
tokio = {version = "1", features = ["full"]}
# Tower middleware
tower = "0.5"
tower-http = {version = "0.6", features = ["cors", "trace", "compression-full", "set-header"]}
# Logging & tracing
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter", "json"]}
# User service crates (internal)
user_service_core = {path = "services/user_service/core"}
user_service_infra = {path = "services/user_service/infra"}
# OpenAPI documentation
utoipa = {version = "5", features = ["axum_extras", "uuid", "chrono"]}
utoipa-swagger-ui = {version = "9", features = ["axum"]}
# UUID & DateTime
uuid = {version = "1.6", features = ["v4", "v7", "serde"]}
validator = {version = "0.20", features = ["derive"]}
wiremock = "0.6"
zxcvbn = "3.1"

[workspace.package]
authors = ["tymon3568 <tymon3568@gmail.com>"]
edition = "2021"
rust-version = "1.82"
version = "0.1.0"
