[[bin]]
name = "kanidm-init"
path = "src/main.rs"

[dependencies]
# Error handling
anyhow = "1.0"
# Config
dotenvy = "0.15"
# HTTP client
reqwest = {version = "0.12", features = ["json", "rustls-tls"], default-features = false}
# Serialization
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "2.0"
# Async runtime
tokio = {version = "1.41", features = ["full"]}
# Logging
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
# URL handling
url = "2.5"

[package]
edition = "2021"
name = "kanidm-init"
version = "0.1.0"

# Standalone binary, not part of workspace
[workspace]
