[dependencies]
anyhow = {workspace = true}
axum = {workspace = true}
config = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
sqlx = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}

[package]
authors = {workspace = true}
edition = {workspace = true}
name = "payment_service"
version = {workspace = true}
