[package]
name = "shared-auth"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Casbin core
casbin = { version = "2.0", default-features = false, features = ["runtime-tokio", "logging", "incremental"] }
sqlx-adapter = "1.8"

# Axum
axum = { workspace = true }
tower = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# HTTP types
http = "1.0"

# UUID
uuid = { workspace = true }

# Shared crates
shared_error = { workspace = true }
shared_jwt = { workspace = true }
shared_types = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
