[dependencies]
anyhow = {workspace = true}
# Axum
axum = {workspace = true}
# Casbin core
casbin = {version = "2.0", default-features = false, features = ["runtime-tokio", "logging", "incremental"]}
futures-util = "0.3"
# HTTP types
http = "1.0"
# Serialization
serde = {workspace = true}
serde_json = {workspace = true}
# Shared crates
shared_error = {workspace = true}
shared_jwt = {workspace = true}
shared_kanidm_client = {workspace = true}
shared_types = {workspace = true}
# Database
sqlx = {workspace = true}
sqlx-adapter = {version = "1.8.0", default-features = false, features = ["postgres", "runtime-tokio-rustls"]}
# Error handling
thiserror = {workspace = true}
# Async runtime
tokio = {workspace = true}
tower = {workspace = true}
# Logging
tracing = {workspace = true}
# UUID
uuid = {workspace = true}

[dev-dependencies]
sqlx = {workspace = true, features = ["sqlite", "runtime-tokio-rustls"]}
tokio-test = "0.4"

[package]
name = "shared-auth"
authors.workspace = true
edition.workspace = true
version.workspace = true
