[dependencies]
anyhow = {workspace = true}
async-trait = {workspace = true}
# Axum
axum = {workspace = true}
# Casbin core
casbin = {version = "2.0", default-features = false, features = ["runtime-tokio", "logging", "incremental"]}
futures-util = "0.3"
# HTTP types
http = "1.0"
# Caching
moka = { version = "0.12", features = ["future"] }
# Hex encoding for cache keys
hex = "0.4"
# Serialization
serde = {workspace = true}
serde_json = {workspace = true}
# Hashing for cache keys
sha2 = "0.10"
# Shared crates
shared_error = {workspace = true}
shared_jwt = {workspace = true}
shared_types = {workspace = true}
# Database
sqlx = {workspace = true}
sqlx-adapter = {version = "1.8.0", default-features = false, features = ["postgres", "runtime-tokio-rustls"]}
# Error handling
thiserror = {workspace = true}
# Async runtime
tokio = {workspace = true}
tower = {workspace = true}
# Logging
tracing = {workspace = true}
# UUID
uuid = {workspace = true}

[dev-dependencies]
sqlx = {workspace = true, features = ["sqlite", "runtime-tokio-rustls"]}
tokio-test = "0.4"

[package]
name = "shared-auth"
authors.workspace = true
edition.workspace = true
version.workspace = true
