[dependencies]
axum = {workspace = true}
casbin = {version = "2.0", default-features = false, features = ["runtime-tokio", "logging", "incremental"]}
serde = {workspace = true}
serde_json = {workspace = true}
sqlx = {workspace = true}
thiserror = {workspace = true}
tracing = {workspace = true}

[package]
name = "shared_error"
authors.workspace = true
edition.workspace = true
version.workspace = true
