[dependencies]
# Async runtime
async-nats = "0.35"
# Serde - serialization
serde = {workspace = true, features = ["derive"]}
# UUID
uuid = {workspace = true}
# Chrono for dates
chrono.workspace = true
# Futures
futures.workspace = true
# Once cell for global state
once_cell.workspace = true
serde_json.workspace = true
# Error handling
shared_error.workspace = true
# Tokio for async
tokio.workspace = true
# Tracing
tracing.workspace = true

[package]
name = "shared_events"
authors.workspace = true
edition.workspace = true
version.workspace = true
