[dependencies]
async-trait = "0.1"
# Base64 for token decoding
base64 = "0.22"
# Time/Date
chrono = {version = "0.4", features = ["serde"]}
# JWT Validation
jsonwebtoken = "9.3"
# OAuth2 Client
oauth2 = "4.4"
# Random for PKCE
rand = "0.8"
reqwest = {version = "0.12", features = ["json", "rustls-tls"], default-features = false}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha2 = "0.10"
# Error Handling
thiserror = "2.0"
# Async Runtime
tokio = {version = "1.42", features = ["full"]}
# Logging
tracing = "0.1"
# URL parsing
url = "2.5"
# UUID
uuid = {version = "1.11", features = ["v7", "serde"]}

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"

[package]
edition = "2021"
name = "shared_kanidm_client"
version = "0.1.0"
