[dependencies]
# Async traits
async-trait = {workspace = true}
chrono = {workspace = true}
# Internal crates
inventory_service_core = {workspace = true, features = ["openapi"]}
# BigDecimal casting
num-traits = "0.2"
# JSON serialization
serde_json = {workspace = true}
# Hashing for idempotency keys
sha2 = "0.10"
# Shared crates
shared_db = {workspace = true}
shared_error = {workspace = true}
# Slug generation
slug = "0.1"
# Database
sqlx = {workspace = true, features = ["postgres", "runtime-tokio-rustls", "macros", "bigdecimal"]}
# Tracing
tracing = "0.1"
# Other
uuid = {workspace = true}
# Validation
validator = {workspace = true}

[dev-dependencies]
# Test dependencies
fake = {workspace = true}
mockall = {workspace = true}
proptest = {workspace = true}
tokio = {workspace = true}
tokio-test = "0.4"

[lib]
name = "inventory_service_infra"
path = "src/lib.rs"

[package]
name = "inventory_service_infra"
authors.workspace = true
edition.workspace = true
version.workspace = true
