[package]
name = "user_service_api"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "user-service"
path = "src/main.rs"

[dependencies]
# Internal crates
user_service_core = { workspace = true }
user_service_infra = { workspace = true }
shared_error = { workspace = true }
shared_config = { workspace = true }
shared_db = { workspace = true }
shared-auth = { workspace = true }

# Axum & web
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Other
uuid = { workspace = true }
chrono = { workspace = true }
validator = { workspace = true }

[features]
default = []
export-spec = []
