[[bin]]
name = "user-service"
path = "src/main.rs"

[dependencies]
async-trait = {workspace = true}
# Axum & web
axum = {workspace = true}
chrono = {workspace = true}
# Serialization
serde = {workspace = true}
serde_json = {workspace = true}
serde_yaml = {workspace = true}
shared-auth = {workspace = true}
shared_config = {workspace = true}
shared_db = {workspace = true}
shared_error = {workspace = true}
shared_kanidm_client = {workspace = true}
sqlx = {workspace = true, features = ["postgres", "runtime-tokio-rustls", "macros"]}
# Async runtime
tokio = {workspace = true}
tower = {workspace = true}
tower-http = {workspace = true}
# Logging
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
# Internal crates
user_service_core = {workspace = true, features = ["openapi"]}
user_service_infra = {workspace = true}
utoipa = {workspace = true}
utoipa-swagger-ui = {workspace = true}
# Other
uuid = {workspace = true}
validator = {workspace = true}

[dev-dependencies]
bcrypt = {workspace = true}
criterion = {workspace = true}
fake = {workspace = true}
futures = "0.3"
http-body-util = "0.1"
jsonwebtoken = "9.2"
mockall = {workspace = true}
proptest = {workspace = true}
shared_jwt = {workspace = true}
sqlx = {workspace = true, features = ["postgres", "runtime-tokio-rustls", "macros"]}
tokio-test = "0.4"
# Test dependencies
tower = {workspace = true}
urlencoding = "2.1"
wiremock = {workspace = true}

[features]
default = []
export-spec = []

# Library for integration tests
[lib]
name = "user_service_api"
path = "src/lib.rs"

[package]
name = "user_service_api"
authors.workspace = true
edition.workspace = true
version.workspace = true
