[dependencies]
async-trait = {workspace = true}
chrono = {workspace = true}
lazy_static = {workspace = true}
regex = {workspace = true}
# External deps
serde = {workspace = true}
serde_json = {workspace = true}
# Shared crates
shared_error = {workspace = true}
shared_types = {workspace = true}
sqlx = {workspace = true}
utoipa = {workspace = true}
uuid = {workspace = true}
validator = {workspace = true}
zxcvbn = {workspace = true}

[package]
name = "user_service_core"
authors.workspace = true
edition.workspace = true
version.workspace = true
