[[bench]]
harness = false
name = "password_benchmarks"

[[bench]]
harness = false
name = "database_benchmarks"

[dependencies]
async-trait = {workspace = true}
chrono = {workspace = true}
lazy_static = {workspace = true}
regex = {workspace = true}
# External deps
serde = {workspace = true}
serde_json = {workspace = true}
# Shared crates
shared_error = {workspace = true}
shared_types = {workspace = true}
sqlx = {workspace = true}
utoipa = {workspace = true}
uuid = {workspace = true}
validator = {workspace = true}
zxcvbn = {workspace = true}
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
criterion = {workspace = true}
fake = {workspace = true}
mockall = {workspace = true}
proptest = {workspace = true}
tokio = {workspace = true}

[features]
openapi = []

[package]
name = "user_service_core"
authors.workspace = true
edition.workspace = true
version.workspace = true
