[[bench]]
harness = false
name = "password_benchmarks"

[[bench]]
harness = false
name = "database_benchmarks"

[dependencies]
async-trait = {workspace = true}
base64 = "0.22"
chrono = {workspace = true}
hex = "0.4"
lazy_static = {workspace = true}
rand = "0.8"
regex = {workspace = true}
# External deps
serde = {workspace = true}
serde_json = {workspace = true}
sha2 = "0.10"
# Shared crates
shared_error = {workspace = true}
shared_types = {workspace = true}
sqlx = {workspace = true}
utoipa = {workspace = true}
uuid = {workspace = true}
validator = {workspace = true}
zxcvbn = {workspace = true}

[dev-dependencies]
criterion = {workspace = true}
fake = {workspace = true}
mockall = {workspace = true}
proptest = {workspace = true}
tokio = {workspace = true}

[features]
openapi = []

[package]
name = "user_service_core"
authors.workspace = true
edition.workspace = true
version.workspace = true
