[dependencies]
async-trait = {workspace = true}
bcrypt = {workspace = true}
chrono = {workspace = true}
serde_json = {workspace = true}
sha2 = {workspace = true}
shared_db = {workspace = true}
shared_error = {workspace = true}
shared_jwt = {workspace = true}
shared_kanidm_client = {workspace = true}
# External deps
sqlx = {workspace = true, features = ["postgres", "runtime-tokio-rustls", "macros"]}
tracing = {workspace = true}
# Internal crates
user_service_core = {workspace = true}
uuid = {workspace = true}

[package]
name = "user_service_infra"
authors.workspace = true
edition.workspace = true
version.workspace = true
