[dependencies]
async-trait = {workspace = true}
aws-config = {workspace = true}
aws-sdk-s3 = {workspace = true}
aws-smithy-runtime-api = {workspace = true}
base64 = "0.22"
bcrypt = {workspace = true}
chrono = {workspace = true}
hex = "0.4"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
rand = "0.8"
redis = {workspace = true}
serde_json = {workspace = true}
sha2 = {workspace = true}
shared-auth = {workspace = true}
shared_db = {workspace = true}
shared_error = {workspace = true}
shared_jwt = {workspace = true}
# External deps
sqlx = {workspace = true, features = ["postgres", "runtime-tokio-rustls", "macros"]}
tokio = {workspace = true}
tracing = {workspace = true}
# Internal crates
user_service_core = {workspace = true}
uuid = {workspace = true}
# Storage enhancements
tokio-retry = "0.3"
metrics = "0.24"
# Image processing
image = { workspace = true }

[package]
name = "user_service_infra"
authors.workspace = true
edition.workspace = true
version.workspace = true
